# ParallelProgramming

./: .gitignore  CMakeLists.txt  ParallelProgramming.sln
lab1/: main.cpp
lab2/: BMPUtils.h  README.md  main.cpp
lab3/: README.md  main.cpp
lab4/: BMPUtils.h  main.cpp
lab5/: main_1.cpp  main_2.cpp  test_1.bat  test_2.bat
lab6/: main_1.cpp  main_2.cpp  main_3.cpp
lab7-1/: Program.cs  file.txt  lab7-1.csproj
lab7-2/: Program.cs  lab7-2.csproj
